Tweak the prompt-dialog-info-label color to prevent unreadable text

--- a/src/gnome-shell/sass/widgets/_dialogs-47.scss
+++ b/src/gnome-shell/sass/widgets/_dialogs-47.scss
@@ -185,6 +185,11 @@
   color: $warning_color;
 }
 
+.prompt-dialog-info-label {
+  color: $primary_color;
+  background-color: transparentize($fg_color, 0.9);
+}
+
 /* Polkit Dialog */
 .polkit-dialog-user-layout {
   text-align: center;
